# diploma

./: .gitattributes  README.md  class_neural.py  input_1.csv  present.py  Предиктор ВАХ слоистой квантоворазмерной структры на основе искусственной нейронной сети.docx
MATLAB_code/: create_I.m  write_file.m
Python_code/: class_neural.py  constants.py  draw_graphic.py  present.py  pyproject.toml  read_data_from_file.py  requirements.txt  rewrite_arrays.py  test_data.py  train_and_get_result.py
Pytorch/: configurations.py  configure_train.py  data_set.py  draw_graphic.py  draw_learning_graphics.py  main.py  neural_network.py  test_net.py  train_net.py
data_sets/: input_big1.csv  input_big_t.csv  output_big1.csv  output_big_t.csv
