[tool.poetry]
name = "Python_code"
version = "0.1.3"
description = "The University project of using Neural Networks in physics"
authors = ["Bazarovinc"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
